[code] added web rowtype
